<resources>
    <string name="app_name">InTime</string>
    <string name="tab_text_1">Alarms</string>
    <string name="tab_text_2">Clocks</string>
    <string name="tab_text_3">Stopwatch</string>
    <string name="tab_text_4">Timer</string>
    <string name="AlarmFragmentTitle">Alarms</string>
    <string name="AlarmAddButton">Add</string>
    <string name="AlarmTitle1">TestAlarmName</string>
    <string name="AlarmIcon">IconOfAnAlarmClock</string>
    <string name="AlarmTime">12:00</string>
    <string name="AlarmTimezoneTime">Time in target timezone:</string>
    <string name="AlarmSwitch">Enabled</string>
    <string name="AlarmEdit">Edit</string>
    <string name="AlarmDelete">Delete</string>
    <string name="StopwatchTitle">Stopwatch</string>
    <string name="StopwatchTime">00:00:00</string>
    <string name="LapsTextTitle">Laps: </string>
    <string name="LapsData"></string>
    <string name="ButtonStart">Start</string>
    <string name="ButtonLap">Lap</string>
    <string name="ButtonStop">Stop</string>
    <string name="ButtonReset">Reset</string>
    <string name="title_activity_alarmedit">AlarmeditActivity</string>
    <string name="AlarmEditTitle">Create Alarm</string>
    <string name="alarmSaveButton">Save Alarm</string>
    <string name="alarmTitleInputFieldText">Write alarm title</string>
    <string name="alarmDescInputFieldText">Write alarm description</string>
    <string name="alarmTimeInputField">Write activation time</string>
    <string name="ClockFragmentTitle">Clocks</string>
    <string name="ClockTimeFormat">00:00</string>
    <string name="ClockIcon">Icon of a custom timezone clock</string>
    <string name="ClockTimezoneName">New York Standard Time (example)</string>
    <string name="TimezoneLocalTime">00:00</string>
    <string name="ClockEditTitle">Create a new clock</string>
    <string name="ClockSaveButton">Save clock</string>
    <string name="ClockDescInputHint">Write clock description here</string>
    <string name="ClockTimezoneAutocorrectSelect">Write location name here (but first begin with continent or country name) to recieve timezone suggestion</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="CancelAlarmButton">Cancel Alarm</string>
    <string name="ReenableAlarm">Set alarm for tomorrow</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_alarm_active">AlarmActiveActivity</string>

</resources>